cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)

rosbuild_init()

set(CMAKE_CXX_FLAGS "-Wno-ignored-qualifiers")

include(${PROJECT_SOURCE_DIR}/idl/FindOpenSplice.cmake)
include(${PROJECT_SOURCE_DIR}/idl/MacroOpenSplice.cmake)

include_directories(${OpenSplice_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/idl_gen)
link_directories(${OpenSplice_LIBRARIES})

#set the default path for built executables to the "bin" directory
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#set the default path for built libraries to the "lib" directory
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStamped.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStamped.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStampedDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStampedDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStampedDcps_impl.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStampedDcps_impl.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStampedSplDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/proxyPoseWithCovarianceStampedSplDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/ccpp_proxyPoseWithCovarianceStamped.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovariance.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovariance.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovarianceDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovarianceDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovarianceDcps_impl.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovarianceDcps_impl.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovarianceSplDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseWithCovarianceSplDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Pose.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Pose.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseDcps_impl.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseDcps_impl.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseSplDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PoseSplDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Point.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Point.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PointDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PointDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PointDcps_impl.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PointDcps_impl.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PointSplDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/PointSplDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Quaternion.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Quaternion.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/QuaternionDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/QuaternionDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/QuaternionDcps_impl.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/QuaternionDcps_impl.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/QuaternionSplDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/QuaternionSplDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Time.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Time.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/TimeDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/TimeDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/TimeDcps_impl.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/TimeDcps_impl.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/TimeSplDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/TimeSplDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Header.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/Header.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/HeaderDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/HeaderDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/HeaderDcps_impl.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/HeaderDcps_impl.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/HeaderSplDcps.cpp")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/HeaderSplDcps.h")
SET(additionalIncludes ${additionalIncludes} "${PROJECT_SOURCE_DIR}/idl_gen/ccpp_Time.h")

# Create executable files 
rosbuild_add_boost_directories()
#rosbuild_add_executable(rosToDDSproxyPoseWithCovarianceStampedPublisher src/proxyPoseWithCovarianceStampedPublisher.cc src/checkStatus.cpp src/ddsManager.cpp ${additionalIncludes})
#rosbuild_add_executable(rosToDDSproxyPoseWithCovarianceStampedSubscriber src/proxyPoseWithCovarianceStampedSubscriber.cc src/checkStatus.cpp src/ddsManager.cpp ${additionalIncludes})
rosbuild_add_executable(proxyPoseWithCovarianceStamped src/proxyPoseWithCovarianceStamped.cpp src/ddsproxyposewithcovariancestamped.cpp src/ddsproxyposewithcovariancestamped.h ${additionalIncludes})

# Link the executables to the corresponding libraries. 
rosbuild_link_boost(proxyPoseWithCovarianceStamped thread)
target_link_libraries(proxyPoseWithCovarianceStamped ${OpenSplice_LIBRARIES} proxy_common)
#target_link_libraries(rosToDDSproxyPoseWithCovarianceStampedPublisher ${OpenSplice_LIBRARIES})
#target_link_libraries(rosToDDSproxyPoseWithCovarianceStampedSubscriber ${OpenSplice_LIBRARIES})
